@@ -2,7 +2,7 @@ import com.github.gradle.node.npm.task.NpmTask
 
 plugins {
     `java-library`
-    id("com.github.node-gradle.node") version "3.1.0"
+    id("com.github.node-gradle.node")
 }
 
 description = "Allure Report Generator"
@@ -10,8 +10,7 @@ description = "Allure Report Generator"
 node {
     // enforce https
     distBaseUrl.set("https://nodejs.org/dist")
-    version.set("14.16.1")
-    npmVersion.set("6.14.12")
+    version.set("16.18.0")
     download.set(true)
 }
 
@@ -19,8 +18,8 @@ val generatedStatic = "build/www"
 
 tasks.npmInstall {
     group = "Build"
-    args.set(listOf("--silent"))
-    npmCommand.set(if (project.hasProperty("prod")) listOf("ci") else listOf("install"))
+    args.set(listOf("--silent", "--no-audit"))
+    npmCommand.set(listOf("ci"))
     environment.set(mapOf("ADBLOCK" to "true"))
     inputs.file("package-lock.json")
     inputs.file("package.json")
@@ -68,10 +67,10 @@ val cleanUpDemoReport by tasks.creating(Delete::class) {
 val generateDemoReport by tasks.creating(JavaExec::class) {
     group = "Documentation"
     dependsOn(cleanUpDemoReport, tasks.named("copyPlugins"))
-    main = "io.qameta.allure.DummyReportGenerator"
+    mainClass.set("io.qameta.allure.DummyReportGenerator")
     classpath = sourceSets.getByName("test").runtimeClasspath
     systemProperty("allure.plugins.directory", "build/plugins")
-    setArgs(arrayListOf(file("test-data/demo"), file("build/demo-report")))
+    setArgs(arrayListOf(file("test-data/new-demo"), file("build/demo-report")))
 }
 
 val dev by tasks.creating(NpmTask::class) {
@@ -92,6 +91,11 @@ tasks.processResources {
 
 tasks.test {
     dependsOn(testWeb)
+    jvmArgs = listOf(
+        "--add-opens",
+        "java.base/java.lang=ALL-UNNAMED",
+        "java.base/java.util=ALL-UNNAMED",
+    )
 }
 
 val allurePlugin by configurations.existing
@@ -105,6 +109,7 @@ dependencies {
     compileOnly("org.projectlombok:lombok")
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml")
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml")
+    implementation("com.fasterxml.jackson.module:jackson-module-jaxb-annotations")
     implementation("commons-io:commons-io")
     implementation("io.qameta.allure:allure-model")
     implementation("javax.xml.bind:jaxb-api")
@@ -116,6 +121,7 @@ dependencies {
     testImplementation("io.qameta.allure:allure-junit-platform")
     testImplementation("org.apache.commons:commons-lang3")
     testImplementation("org.assertj:assertj-core")
+    testImplementation("org.junit-pioneer:junit-pioneer")
     testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation("org.mockito:mockito-core")
     testImplementation("org.slf4j:slf4j-simple")
